[package]
name = "molpha"
version = "0.1.0"
description = "Molpha Oracle Solana Program - Merged from molpha-solana and molpha-feed"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "molpha"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
hex = "0.4"
